force-app/main/default/objects/Opportunity/fields/Opportunity_Score__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Score__c</fullName>
    <description>Predictive score from 0-100</description>
    <label>Opportunity Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>