force-app/main/default/objects/Opportunity/fields/Score_Category__c.field-meta.xml
<CustomField>
    <fullName>Score_Category__c</fullName>
    <label>Score Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>